--- a/devops.html
+++ b/devops.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://talpasolutions.join.com/jobs/474281-devops-programmer'>Job @ talpasolutions (Essen): DevOps Programmer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://qustodio.recruitee.com/o/devops-lead'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qustodio.recruitee.com/o/devops-lead'>
       DevOps Lead - Qustodio
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -218,7 +218,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -250,7 +250,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -304,7 +304,7 @@
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
       Lead DevOps Engineer - OpenVPN Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -388,7 +388,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
@@ -435,7 +435,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/JVYKAUdSxF/Senior-DevOps-Engineer-Multiple-Countries'>Senior DevOps Engineer - Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<h5><a href='http://moduscreate.applytojob.com/apply/JVYKAUdSxF/Senior-DevOps-Engineer-Multiple-Countries'>Senior DevOps Engineer - Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
